# lustrious-paint

./: CMakeLists.txt  Lustrious-Paint.cabal  LustriousPaint.rc  LustriousPaint.sln  LustriousPaint.vcxproj  LustriousPaint.vcxproj.filters  Makefile  NOTES  ROADMAP  count.sh  main.cpp  main.rs  main.rs.old  resource.h  stack.yaml
Application/: CMakeLists.txt
Application/Include/: BrushRig.h  FWin32MessageHandler.h  LsBrushRig.h  LsPointGrid.h  LsStuffingDemo.h  LsUselessBox.h  Version.h  Version.h.in
Application/Source/: BrushRig.cpp  FWin32MessageHandler.cpp  LsBrushRig.cpp  LsPointGrid.cpp  LsStuffingDemo.cpp  LsUselessBox.cpp  LsWin32MainWindow.h  Main__.cpp  main.cpp  test-main.cpp
CMake/: BuildInfo.cmake  FindCAF.cmake  FindFreeImage.cmake  FindVulkanSDK.cmake  README.txt
Data/: README.txt
Docs/: 2-15-2017.txt  2-17-2017.txt  3-2-2017.txt  4-28-2017.txt  5-2-2018
Include/: destructor.h
Installer/: README.txt
Libraries/: CMakeLists.txt  README.txt  cat.cpp  catted.cpp
Libraries/LsInput/: CMakeLists.txt
Libraries/LsInput/Source/: LsInput.cpp
Libraries/LsMath/: CMakeLists.txt
Libraries/LsMath/Include/: LsGeometry.h  LsMath.h
Libraries/LsMath/Source/: LsGeometry.cpp  LsMath.cpp  LsVector3.cpp
Libraries/LsMath/Tests/: Main.cpp
Libraries/LsRenderer/: CMakeLists.txt
Libraries/LsRenderer/Include/: LSVulkanDevice.h  LsImage.h  LsPushConstantTypes.h  LsRecording.h  LsRenderer.h  LsVulkanCommandBuffers.h  LsVulkanCommon.h  LsVulkanInstance.h  LsVulkanPresentation.h  LsVulkanRendering.h
Libraries/LsRenderer/Source/: LsImage.cpp  LsRenderer.cpp
Libraries/LsStuffing/: CMakeLists.txt
Libraries/LsStuffing/Include/: LsBCCLattice.h  LsBCCLatticeRef.h  LsBCCLatticeTypes.h  LsHashedBCCLatticeVertex.h  LsITetrahedronProcessor.h  LsIsosphere.h  LsIsosurfaceStuffer.h  LsLatticeVertexRef.h  LsPatternMatchers.h  LsSpringMeshBuilder.h  LsSpringMeshTypes.h  LsTetrahedronMesh.h  LsTetrahedronStuffer.h
Libraries/LsStuffing/Source/: LsBCCLattice.cpp  LsBCCLatticeRef.cpp  LsHashedBCCLatticeVertex.cpp  LsIsosphere.cpp  LsIsosurfaceStuffer.cpp  LsLatticeVertexRef.cpp  LsPatternMatchers.cpp  LsSpringMeshBuilder.cpp  LsTetrahedronMesh.cpp  LsTetrahedronStuffer.cpp
Libraries/LsStuffing/Tests/: LsBCCLatticeTests.h  LsHashingTest.h  LsIsosphereTests.h  LsPatternMatchersTest.h  LsTetrahedronMeshTest.h  Main.cpp
Libraries/LsUtility/: CMakeLists.txt
Libraries/LsUtility/Include/: FactoradicPermutation.hh  IvTypes.h  LsConsole.h  LsError.h  LsFile.h  LsGlmHelpers.h  LsOptional.h  LsStdAlgorithms.h  LsWindowsUtils.h
Libraries/LsUtility/Source/: LsConsole.cpp  LsError.cpp  LsFile.cpp
Libraries/LsVulkanLoader/: CMakeLists.txt
Libraries/LsVulkanLoader/Include/: LsVulkanCommands.h  LsVulkanCommands.inl  LsVulkanLoader.h  vulkan_dynamic.hpp
Libraries/LsVulkanLoader/Source/: LsVulkanCommands.cpp  LsVulkanLoader.cpp  vulkan_dynamic.cpp
Libraries/LsWin32MainWindow/: CMakeLists.txt
Libraries/LsWin32MainWindow/Include/: LsFWin32MessageHandler.h  LsWin32MainWindow.h
Libraries/LsWin32MainWindow/Source/: LsFWin32MessageHandler.cpp  LsWin32MainWindow.cpp
Libraries/LsWintabLoader/: CMakeLists.txt
Libraries/LsWintabLoader/Include/: DWINTAB.h  LsWintabLoader.h
Libraries/LsWintabLoader/Source/: DWINTAB.cpp  LsWintabLoader.cpp
Resources/: Icon.rc  Version.rc  Version.rc.in
Shaders/: CMakeLists.txt  README.txt  image.frag  image.vert  line.vert  paint.comp  point.frag  point.vert
Tools/: CMakeLists.txt  README.txt
Tools/ActorPlayground/: CMakeLists.txt
Tools/ActorPlayground/Source/: ActorPlayground.cpp  main.cpp
cmake/: FindVulkan.cmake
include/vulkan/: vk_cpp.hpp
libcbpad/: Makefile  cbpad.c  cbpad.h  cbpad.nasm  cbpad_x86-64.nasm  cbpad_x86.nasm  check.mk  config.mk
resources/: Version.rc.in  icon.rc  icon.res  version.rc  version.rc.in
shaders/: line.frag  line.vert  point.frag  point.vert  shader.frag  shader.vert
src/: Application.hpp  Flags.h  Main.cpp  Main.hs  Optional.hpp  Tools.h  Utils.h  Version.h.in  Vk.cpp  Vk.hpp  Vulkan.cpp  Vulkan.h  Vulkan.hpp  VulkanCommands.inl  VulkanCommon.hpp  VulkanFunctions.inl  WindowState.h  Windows.hs  ctypes.rs  main.c  main.cpp  main.rs  stuffing.h  utility.h  vk_functions.inl  win32.rs  win32_console.cpp  win32_console.hpp  wt.cpp  wt.hpp  wt_functions.inl  wt_pfns.hpp  wt_pfns.inl
src/.trash/: Application.hpp  RenderSystem.hpp  VulkanParameters.hpp
src/LsMath/: LsMath.h  LsVector3.h
src/LsStuffing/: LsBCCLattice.cpp  LsBCCLattice.h  LsTetrahedronMesh.cpp  LsTetrahedronMesh.h
src/LsUtility/: LsOptional.h  LsTuple.h
src/LsVulkanLoader/: LsVulkanCommands.cpp  LsVulkanCommands.h  LsVulkanLoader.cpp  LsVulkanLoader.h  vulkan_dynamic.hpp
src/dx11/: consts.rs  imports.rs  lib.rs  types.rs
src/win32/: consts.rs  imports.rs  lib.rs  types.rs  wrappers.rs
tests/: LsBCCLatticeTests.h  LsTetrahedronMeshTest.h  tests.cpp
