name:                lustrious-paint
version:             0.1.0.0
synopsis:            A digital painting application
description:         A digital painting application
homepage:            www.lustrious-paint.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Vladislav Shcherbakov
maintainer:          vlad.shcherbakov@lustrious-paint.com
copyright:           2016 Vladislav Shcherbakov
category:            Art
build-type:          Simple
cabal-version:       >=1.10

executable lustrious-paint
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
